[package]
name = "dynasty"
version = "0.6.0"
edition = "2021"
build = "build.rs"
description = "Feynman graph topology identification"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = ["physics", "graph-algorithms"]
categories = ["science"]
# repository = "https://github.com/a-maier/dynasty"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1.0"
clap = { version = "3.0", features = ["derive"] }
derivative = "2.2"
env_logger = "0.9"
indexmap = { version = "1.8", features = ["serde"] }
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
math-symbols = { git = "ssh://git@gitlab.dur.scotgrid.ac.uk/tomuca/math-symbols.git", tag = "0.1.0" }
memmap = "0.7"
nalgebra = "0.31"
nauty-pet = { version = "0.8", features = ["stable"] }
nom = "7"
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"

[build-dependencies]
vergen = "7"

[lib]
name = "dynasty"
path = "src/lib.rs"

[[bin]]
name = "dynasty"
path = "src/main.rs"
