[package]
name = "dynast"
version = "0.10.0"
edition = "2021"
build = "build.rs"
description = "Feynman graph topology identification"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = ["physics", "graph-algorithms"]
categories = ["science"]
repository = "https://github.com/a-maier/dynast"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
anyhow = "1.0"
biconnected-components = "0.3.0"
clap = { version = "4.3", features = ["derive"] }
derivative = "2.2"
env_logger = "0.11"
indexmap = { version = "2.0", features = ["serde"] }
itertools = "0.13"
lazy_static = "1.4"
log = "0.4"
math-symbols = "0.1"
nalgebra = "0.33"
nauty-pet = { version = "0.12", features = ["stable"] }
nom = "7"
num-traits = "0.2"
petgraph = "0.6"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1.0"

[build-dependencies]
vergen-gitcl = "1.0"

[lib]
name = "dynast"
path = "src/lib.rs"

[[bin]]
name = "dynast"
path = "src/main.rs"
