[package]
name = "dynast-momentum"
version = "0.12.0"
edition = "2021"
description = "Symbolic four-momenta for Feynman graphs"
authors = ["Andreas Maier <amaier@ifae.es>"]
license = "GPL-3.0-or-later"
keywords = ["physics"]
categories = ["science"]
repository = "https://github.com/a-maier/dynast"

[dependencies]
ahash = { version = "0.8", optional = true }
indexmap = { version = "2.7.0", optional = true }
math-symbols = "0.1"
num-traits = { version = "0.2.19", optional = true }
serde = { version = "1.0", optional = true }

[features]
serde = ["dep:serde", "ahash/serde"]
serde-1 = ["serde"]
num-traits = ["dep:num-traits"]
indexmap = ["dep:indexmap"]
